--- a/ĐH NTT/homepage.html
+++ b/ĐH NTT/homepage.html
@@ -8,7 +8,6 @@
 	<link rel="stylesheet" type="text/css" href="./bootstrap/css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-	<!-- Add the new slick-theme.css if you want the default styling -->
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	<script type="text/javascript"></script>
 </head>
@@ -29,7 +28,7 @@
 						<input type="text" name="" placeholder="Tìm kiếm thông tin ">
 						<i class="fa fa-search" aria-hidden="true"></i>
 					</form>
-					<a href="http://en.ntt.edu.vn/web"><img src="http://ntt.edu.vn/web/frontend/images/ico-flagen.jpg"></a>
+					<a href="http://en.ntt.edu.vn/web"><img src="./images/iconflag.jpg"></a>
 				</div>
 			</div>
 		</div>
@@ -48,7 +47,7 @@
 							</form>		
 						</div>
 						<div class="col right">
-							<img src="http://ntt.edu.vn/web/frontend/images/ico-flagen.jpg">
+							<img src="./images/iconflag.jpg">
 						</div>
 					</div>	
 				</div>	
@@ -65,7 +64,7 @@
 				<!--end head-responsive-->
 				<div class="wrapper">
 					<nav class="navbar navbar-expand-lg">
-					  	<img src="./images/logo_ntt.png">
+					  	<img src="./images/logo_ntt.jpg">
 					  <button style="outline: none;" class="navbar-toggler" type="button" >
 					    <i id="showCollapse2" style="border: 1px solid #d0d0d0;padding: 10px;" class="fa fa-bars c-blue-a5"></i>
 					  </button>
@@ -104,11 +103,6 @@
 							<div class="triangle">
 								<a id="showCollapse"><i class="fa fa-bars c-blue-a5"></i></a>	
 							</div>
-							<!-- <div class="collapse" id="collapseExample">
-							  <div class="card card-body">
-							    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-							  </div>
-							</div> -->
 						</div>
 					  <div class="carousel-inner">
 					    <div class="carousel-item active">
@@ -278,13 +272,9 @@
 							<div class="control-button">
 								<div class="right">
 									<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-								    <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-								    <span class="sr-only">Previous</span> -->
 								    <i class="fas fa-angle-left"></i>
 								  </a>
 								  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-								    <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
-								    <span class="sr-only">Next</span> -->
 								    <i class="fas fa-angle-right"></i>
 								  </a>
 								</div>	
